# workspace

./: README.md
LLMBootcamp/guarding_against_malicious_prompting/: api_requests.py  classifier.py  dataset_prompt.md  generate.py  guard.py  investing.md  sensitive_prompts.md
LLMBootcamp/historical_figure_conversation/: api_requests.py  conversation.py
LLMBootcamp/llm_bootcamp_tools/: api_requests.py
LLMBootcamp/marvin_api_clone/: api_requests.py  gladOS.py
LLMBootcamp/mock_notebooklm/: mock_notebooklm.py
c++_proj/: firstproj.cpp  test.cpp
c++_proj/leetCode/: leetcode_num2.cpp
dir_c++/: .test.cpp.swp
dir_c++/leetCode/: leetcode_num1.cpp
dir_java/Leetcode/: compile_and_run.sh
dir_js/cypress_practice/: package-lock.json  package.json
dir_js/jest_practice/: sum.js
dir_js/promise_practice/: package.json
dir_py/: leetcode_prob1.py  leetcode_prob2.py
dir_py/real_estate_ai_project/: README.md  main.py  requirements.txt
dir_py/realestate_ai_project/: main.py
dir_sql/: sample_db_population.sql
dir_ts/playwright_test/: package-lock.json
java_proj/Java_Test_Projects/: example_compilation_usage.txt  manifest.txt
supportvectors_io/crew_newsletter/crew_newsletter/: README.md  pyproject.toml
supportvectors_io/crew_newsletter/crew_newsletter/src/crew_newsletter/: crew.py  main.py
supportvectors_io/crew_newsletter/crew_newsletter/src/crew_newsletter/config/: agents.yaml  tasks.yaml
supportvectors_io/crew_newsletter/crew_newsletter/src/crew_newsletter/tools/: custom_tool.py
supportvectors_io/travel_app/planning_crew/: pyproject.toml
(+128 files in other folders)
