[project]
name = "crew_newsletter"
version = "0.1.0"
description = "crew_newsletter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.74.2,<1.0.0"
]

[project.scripts]
crew_newsletter = "crew_newsletter.main:run"
run_crew = "crew_newsletter.main:run"
train = "crew_newsletter.main:train"
replay = "crew_newsletter.main:replay"
test = "crew_newsletter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
